# sdt-python

./: .gitignore  .gitmodules  CHANGELOG.html  CHANGELOG.rst  README.md  README.rst  REUSE.toml  TODO.md  TODO.rst  brightness.html  changepoint.html  channel_reg.html  chromatic.html  data.py  exp_fit.html  feature.py  find_numba.py  flatfield.html  fret.html  funcs.html  gaussian_fit.html  genindex.html  helper.html  image.html  image_tools.py  index.html  io.html  loc.html  local_maxima.py  local_maxima_numba.py  merge_peaks.py  motion.html  multicolor.html  nbui.html  objects.inv  optimize.html  pims_oiio.py  plot.html  py-modindex.html  pyproject.toml  (+14 more)
.github/workflows/: testing.yml
.kdev4/: sdt-python.kdev4
.reuse/: dep5
_modules/: index.html
_modules/sdt/: brightness.html  channel_reg.html  chromatic.html  config.html  exp_fit.html  flatfield.html  funcs.html  gaussian_fit.html  multicolor.html  plot.html  spatial.html  stats.html
_modules/traitlets/: traitlets.html
_sources/: CHANGELOG.rst  CHANGELOG.rst.txt  channel_reg.rst.txt  chromatic.rst.txt  exp_fit.rst.txt  fret.rst  funcs.rst.txt  gaussian_fit.rst.txt  helper.rst  image.rst.txt  index.rst.txt  loc.rst.txt  motion.rst.txt  multicolor.rst  nbui.rst  sim.rst.txt
_static/: documentation_options.js
conda-recipe/: meta.yaml  run_test.sh
data_data/: comm_frame0.npy
data_find/: beads.npz  local_max.npy
data_fit/: beads_fit_2dfixed.npz  beads_iter_2dfixed.npz  calc_peaks.npy  fit_img.npz  fit_img_with_bg.npy
debug/daostorm_3d/: .gitignore  README.txt  algorithm.py  find.py  fit.py  fit_2d.py  fit_2dfixed.py  fit_3d.py  fit_z_model.py  fitz_test.c  iterate.py  iterate_2d.py  iterate_2dfixed.py  iterate_3d.py  iterate_z_model.py  locate_2dfixed.py  sim_astigmatism.py  z_fit.py
debug/prepare_peakposition/: compare.py  try_use_daostorm.py
doc/: .gitignore  Makefile  background.rst  beam_shape.rst  brightness.rst  changepoint.rst  chromatic.rst  conf.py  data.rst  data_file.rst  data_filter.rst  enclosing_circles.svg.license  exp_fit.rst  flatfield.rst  fret.rst  funcs.rst  gaussian_fit.rst  helper.rst  image.rst  image_processing.rst  image_tools.rst  index.rst  io.rst  loc.rst  make.bat  motion.rst  multicolor.rst  nbui.rst  optimize.rst  pims.rst  plot.rst  roi.rst  sim.rst  spatial.rst  stats.rst  z_fit.rst
profile/: brightness.ipynb  changepoint.ipynb  daostorm_3d.ipynb
sdt/: __init__.py  _version.py  background.py  beam_shape.py  brightness.py  channel_reg.py  chromatic.py  chromatic.ui  compat.py  config.py  data.py  diffusion.py  exceptions.py  exp_fit.py  flatfield.py  fret.py  funcs.py  gaussian_fit.py  image_filter.py  image_tools.py  motion.py  multicolor.py  numba_helper.py  pims.py  pims_spe.py  plot.py  plots_viewer.py  plots_viewer.ui  roi.py  sim.py  sm_fret.py  sm_fret_viewer.py  sm_fret_viewer.ui  spatial.py  stats.py  testing.py
sdt/changepoint/: __init__.py  bayes_offline.py  bayes_online.py  offline.py  online.py  pelt.py  plot.py  utils.py
sdt/data/: __init__.py  file.py  filter.py  yaml.py
sdt/fret/: __init__.py  image_filter.py  image_utils.py  sm_analyzer.py  sm_filter.py  sm_plot.py  sm_track.py  sm_tracker.py  utils.py
sdt/gui/: __init__.py  __main__.py  _mpl_path_elements.py  batch_worker.py  cg_options.ui  channel_config.py  chromatic.py  chromatic.ui  d3d_options.ui  daostorm_3d_options.ui  data_collector.py  dataset.py  dataset_selector.py  file_chooser.py  file_chooser.ui  file_options.ui  frame_selector.py  image_display.py  image_pipeline.py  image_selector.py  image_viewer.py  item_models.py  loc_display.py  loc_filter.ui  loc_options.py  loc_save_options.ui  locate_filter.py  locate_options.py  locate_save_widget.ui  locate_saver.py  locator.py  micro_view.py  micro_view_widget.ui  mpl_backend.py  option_chooser.py  option_model.py  pp_options.ui  process_worker.py  py_image.py  qimage.py  (+12 more)
sdt/helper/: __init__.py  numba.py  pandas.py  raise_in_thread.py  singleton.py  slicerator.py
sdt/image/: __init__.py  filters.py  masks.py  threshold.py  utils.py
sdt/io/: __init__.py  filter.py  fs.py  image_sequence.py  sm.py  tiff.py  yaml.py
sdt/loc/: __init__.py  bg_estimator.py  make_batch.py  raw_features.py  restrict_roi.py  snr_filters.py  z_fit.py
sdt/motion/: __init__.py  immobilization.py  msd.py  msd_base.py  msd_cdf.py  msd_dist.py
sdt/multicolor/: __init__.py  coloc.py  frame_selector.py  registrator.py
sdt/nbui/: __init__.py  channel_splitter.py  file_dialog.py  image_display.py  image_selector.py  locator.py  roi_selector.py  thresholder.py
sdt/optimize/: __init__.py  affine_fit.py  exp_fit.py  gaussian_fit.py  ransac.py
sdt/roi/: __init__.py  imagej.py  mask_roi.py  roi.py
sdt/sim/: __init__.py  fluo_image.py  sm_tracks.py
tests/: beads1.h5  beads1_corrector.h5  conda-env.yml  scores.npy  test_background.py  test_beam_shape.py  test_brightness.py  test_changepoint.py  test_channel_reg.py  test_chromatic.py  test_config.py  test_data.py  test_diffusion.py  test_exp.py  test_flatfield.py  test_fret.py  test_funcs.py  test_gaussian.py  test_helper.py  test_image.py  test_image_filter.py  test_image_tools.py  test_io.py  test_loc.py  test_loc_cg.py  test_motion.py  test_multicolor.py  test_multicolor_registrator.py  test_optimize_affine_fit.py  test_optimize_exp_fit.py  test_optimize_gaussian_fit.py  test_optimize_ransac.py  test_roi.py  test_sim.py  test_singleton.py  test_slicerator.py  test_spatial.py  test_stats.py  test_testing.py  vectors.npy
tests/daostorm_3d/: test_algorithm.py  test_api.py  test_data.py  test_feature.py  test_find.py  test_find_numba.py  test_fit.py  test_fit_numba.py
tests/data_background/: cg.npz  wavelet_bg.npz
tests/data_brightness/: peak_data.h5  plot_pdf_xy.npz
tests/data_changepoint/: offline_full_multiv.npz  offline_gauss_univ.npz  online.npz
tests/data_chromatic/: beads1.h5  coords_corrected.npy  img_corrected.npy  pairs.h5  vectors.npy
tests/data_data/: msdplot.h5  orig_pkc.h5  orig_pks.h5  orig_pt2d.h5  pMHC_AF647_200k_000_.SPE  pMHC_AF647_200k_000_.pkc  pMHC_AF647_200k_000_.pks  (+3 more)
(+271 files in other folders)
