# SPDX-FileCopyrightText: 2024 Lukas Schrangl <lukas.schrangl@boku.ac.at>
#
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "sdt-python"
dependencies = [
    "imageio >= 2.29",
    "lazy_loader",
    "matplotlib",
    "numpy>=2.1",
    "opencv-python-headless",
    "pandas>=2.2.3",
    "pyyaml",
    "tables>=3.10",
    "tifffile >= 2022.2.2",
    "scipy > 0.18",
]
requires-python = ">= 3.10"
authors = [
    { name = "Lukas Schrangl", email = "lukas.schrangl@boku.ac.at" }
]
maintainers = [
    { name = "Lukas Schrangl", email = "lukas.schrangl@boku.ac.at" }
]
description = "Tools for fluorescence microscopy analysis"
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",

    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: MIT License",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
]
license-files = { globs = ["LICENSES/*.txt", "sdt/gui/breeze-icons/COPYING-ICONS"] }

[project.urls]
Documentation = "https://schuetzgroup.github.io/sdt-python"
Repository = "https://github.com/schuetzgroup/sdt-python"

[dependency-groups]
dev = [
    "lmfit>=1.3.3",
    "numba>=0.60.0",
    "pims>=0.7",
    "pyqt5>=5.15.11",
    "pytest>=8.3.5",
    "pytest-qt>=4.4.0",
    "pywavelets>=1.6.0",
    "scikit-learn>=1.6.1",
    "trackpy>=0.6.4",
]

[tool.uv]
# This is the latest version on Windows; if not specified, uv fails
constraint-dependencies = ["pyqt5-qt5==5.15.2; sys_platform == 'win32'"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.hatch.version]
path = "sdt/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
    ".*",
    "/doc/_build",
    # unneeded icons below; keep in sync with wheel!
    "/sdt/gui/breeze-icons/autotests",
    "/sdt/gui/breeze-icons/cmake",
    "/sdt/gui/breeze-icons/icons/*/[13456789]*/*.svg",
    "/sdt/gui/breeze-icons/icons/*/22@*/*.svg",
    "/sdt/gui/breeze-icons/icons/*/256*/*.svg",
    "/sdt/gui/breeze-icons/icons/*/symbolic*/*.svg",
    "/sdt/gui/breeze-icons/icons-dark",
    "/sdt/gui/breeze-icons/webfont",
    "/sdt/gui/breeze-icons/CMakeLists.txt",
    "/sdt/gui/breeze-icons/metainfo.yaml",
    "/sdt/gui/breeze-icons/qrcAlias.cpp",
    "/sdt/gui/breeze-icons/*.py",
    "/sdt/gui/breeze-icons/*.sh",
]
only-include = [
    "/doc",
    "/sdt",
    "/tests",
]

[tool.hatch.build.targets.wheel]
exclude = [
    # unneeded icons below; keep in sync with sdist!
    "/sdt/gui/breeze-icons/autotests",
    "/sdt/gui/breeze-icons/cmake",
    "/sdt/gui/breeze-icons/icons/*/[13456789]*/*.svg",
    "/sdt/gui/breeze-icons/icons/*/22@*/*.svg",
    "/sdt/gui/breeze-icons/icons/*/256*/*.svg",
    "/sdt/gui/breeze-icons/icons/*/symbolic*/*.svg",
    "/sdt/gui/breeze-icons/icons-dark",
    "/sdt/gui/breeze-icons/webfont",
    "/sdt/gui/breeze-icons/CMakeLists.txt",
    "/sdt/gui/breeze-icons/metainfo.yaml",
    "/sdt/gui/breeze-icons/qrcAlias.cpp",
    "/sdt/gui/breeze-icons/*.py",
    "/sdt/gui/breeze-icons/*.sh",
]
only-include = [
    "/sdt",
]

[tool.pytest.ini_options]
markers = "slow: tests that take some time"
