# SPDX-FileCopyrightText: 2020 Lukas Schrangl <lukas.schrangl@tuwien.ac.at>
#
# SPDX-License-Identifier: BSD-3-Clause

[metadata]
name = sdt-python
author = Lukas Schrangl
author_email = lukas.schrangl@tuwien.ac.at
description = Tools for fluorescence microscopy analysis
url = https://github.com/schuetzgroup/sdt-python
license = BSD-3-Clause
license_files = LICENSES/*
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: sdt.__version__

[build_sphinx]
source-dir = doc/
build-dir  = doc/_build
